<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".AtvCadastroCategoria">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="Cadastro de Categoria"
            android:textStyle="bold"
            android:textColor="?attr/colorOnPrimaryFixed"
            android:fontFamily="cursive"
            android:textSize="40dp"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGravar"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/gravar" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_weight="1"
            android:text="@string/cancelar" />

        <Button
            android:id="@+id/btnExcluir"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_error"
            android:text="@string/excluir" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/id"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edtId"
        style="@style/EditText"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:inputType="number"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/nome"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edtNome"
        style="@style/EditText"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:inputType="text"
        android:textColor="@color/black"/>
</LinearLayout>